kubernetes/apps/gotanks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotanks
  namespace: apps
spec:
  selector:
    app: gotanks
  ports:
    - port: 8080
      targetPort: 8080
