kubernetes/apps/gotanks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotanks
  namespace: apps
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: main
      namespace: networking
      sectionName: https-tanks
  hostnames:
    - tanks.fingo.ink
  rules:
    - backendRefs:
        - name: gotanks
          port: 8080
