kubernetes/apps/gotanks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotanks
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tanks.fingo.ink
      secretName: tanks.fingo-tls
  rules:
    - host: tanks.fingo.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotanks
                port:
                  number: 8080
